--- a/29th_Jan_Assignment.ipynb
+++ b/29th_Jan_Assignment.ipynb
@@ -21,7 +21,7 @@
    "id": "4f5f8ce6",
    "metadata": {},
    "source": [
-    "#### Pyhon Programming Language was was developed by Guido van Rossum"
+    "#### Pyhon Programming Language was developed by Guido van Rossum"
    ]
   },
   {
